# amux

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  PLAN.md  README.md  RELEASE.md  THIRD_PARTY_NOTICES.md  TODO.md  amux.tmux  cog.toml  hk.pkl  mise.toml
.github/workflows/: ci.yml
docs/: events.md  performance.md
hooks/claude/: settings.fragment.json
hooks/codex/: hooks.json
hooks/opencode/: amux.js
hooks/pi/: amux.ts
lib/: core.sh  state.sh
scripts/: ensure-runtime.sh  install-hooks.sh  next-attention.sh  picker.sh  status.sh  uninstall-hooks.sh
src/: config.rs  daemon.rs  event.rs  hooks.rs  ipc.rs  lib.rs  main.rs  model.rs  render.rs  sessions.rs  state.rs  tmux.rs  ui.rs
tests/: rust_smoke.rs  smoke.sh  tpm-bootstrap.sh
tests/fixtures/: claude-stop.json  codex-permission.json  codex-subagent-empty-cwd.json  codex-subagent.json  opencode-idle.json  pi-tool-call.json
