[package]
name = "amux"
version = "0.1.1"
edition = "2024"
rust-version = "1.96"

[[bin]]
name = "amux-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
tmuxctl = { version = "=0.1.0", default-features = false, features = ["tokio"] }
tokio = { version = "1.49", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
